# cpm

./: .gitignore  README.md  credit_portfolio_model_climate_overlay.md  implementation_plan.md
data/calibration/: README.md  lambda_parameters.csv  region_scores.csv  residual_variance.csv  sector_scores.csv
data/calibration/raw_data/: DATA_INVENTORY.md
data/market_data/: download_metadata.txt  regional_etf_prices.csv  sector_etf_prices.csv
data/portfolios/: sample_portfolio_500.csv
data/scenarios/: README.md  current_policies.csv  delayed_transition.csv  net_zero_2050.csv  ngfs_transition_drivers_full.csv  ngfs_transition_drivers_raw.csv  physical_risk_full.csv  process_physical_risk.py
data/scenarios/OriginalNGFS/: reference.xlsx
data/scenarios/originalWorldBank/cdd/ssp126/: anomaly-cdd-annual-mean_cmip6-x0.25_access-cm2-r1i1p1f1-ssp126_climatology_mean_2020-2039.nc  (+3 more)
data/templates/: lambda_parameters_template.csv  portfolio_template.csv  region_scores_template.csv  scenario_template.csv  sector_scores_template.csv
docs/: architecture.md  correlation_calibration_quick_reference.md  credit_portfolio_model_climate_overlay.html  credit_portfolio_model_climate_overlay.md  credit_portfolio_model_climate_overlay.tex  data_sources.md  implementation_plan.md  market_data_sources.md  model_critique.md  sensitivity_calibration_data_sources.md
engine/: CMakeLists.txt
engine/include/midas/: calibration.hpp  portfolio.hpp  scenario.hpp
engine/src/core/: calibration.cpp  portfolio.cpp  scenario.cpp
engine/tests/: test_calibration.cpp  test_main.cpp  test_portfolio.cpp  test_scenario.cpp
scripts/: add_beta_columns.py  download_market_data.py
(+32 files in other folders)
